docs/0.18/_sources/api/gammapy.estimators.FluxPointsEstimator.rst.txt
FluxPointsEstimator
===================

.. currentmodule:: gammapy.estimators

.. autoclass:: FluxPointsEstimator
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~FluxPointsEstimator.config_parameters
      ~FluxPointsEstimator.selection_optional
      ~FluxPointsEstimator.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~FluxPointsEstimator.copy
      ~FluxPointsEstimator.estimate_counts
      ~FluxPointsEstimator.estimate_flux_point
      ~FluxPointsEstimator.get_sqrt_ts
      ~FluxPointsEstimator.run

   .. rubric:: Attributes Documentation

   .. autoattribute:: config_parameters
   .. autoattribute:: selection_optional
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: copy
   .. automethod:: estimate_counts
   .. automethod:: estimate_flux_point
   .. automethod:: get_sqrt_ts
   .. automethod:: run
