docs/1.2/_sources/api/gammapy.estimators.FluxPointsEstimator.rst.txt
FluxPointsEstimator
===================

.. currentmodule:: gammapy.estimators

.. autoclass:: FluxPointsEstimator
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~FluxPointsEstimator.config_parameters
      ~FluxPointsEstimator.n_jobs
      ~FluxPointsEstimator.norm_max
      ~FluxPointsEstimator.norm_min
      ~FluxPointsEstimator.norm_n_values
      ~FluxPointsEstimator.norm_values
      ~FluxPointsEstimator.parallel_backend
      ~FluxPointsEstimator.selection_optional
      ~FluxPointsEstimator.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~FluxPointsEstimator.copy
      ~FluxPointsEstimator.estimate_best_fit
      ~FluxPointsEstimator.estimate_counts
      ~FluxPointsEstimator.estimate_errn_errp
      ~FluxPointsEstimator.estimate_flux_point
      ~FluxPointsEstimator.estimate_npred
      ~FluxPointsEstimator.estimate_npred_excess
      ~FluxPointsEstimator.estimate_scan
      ~FluxPointsEstimator.estimate_ts
      ~FluxPointsEstimator.estimate_ul
      ~FluxPointsEstimator.get_scale_model
      ~FluxPointsEstimator.run

   .. rubric:: Attributes Documentation

   .. autoattribute:: config_parameters
   .. autoattribute:: n_jobs
   .. autoattribute:: norm_max
   .. autoattribute:: norm_min
   .. autoattribute:: norm_n_values
   .. autoattribute:: norm_values
   .. autoattribute:: parallel_backend
   .. autoattribute:: selection_optional
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: copy
   .. automethod:: estimate_best_fit
   .. automethod:: estimate_counts
   .. automethod:: estimate_errn_errp
   .. automethod:: estimate_flux_point
   .. automethod:: estimate_npred
   .. automethod:: estimate_npred_excess
   .. automethod:: estimate_scan
   .. automethod:: estimate_ts
   .. automethod:: estimate_ul
   .. automethod:: get_scale_model
   .. automethod:: run
